--- a/package.json
+++ b/package.json
@@ -6,17 +6,21 @@
   "main": "src/index.js",
   "dependencies": {
     "react": "16.12.0",
-    "react-dom": "16.12.0",
-    "react-scripts": "3.0.1"
+    "react-dom": "16.12.0"
   },
   "devDependencies": {
+    "gh-pages": "^3.1.0",
+    "react-scripts": "^3.4.1",
     "typescript": "3.8.3"
   },
+  "homepage": "https://cazdemun.github.io/fish-bowl/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": [
     ">0.2%",
