--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "@ant-design/icons": "^4.2.2",
+    "antd": "^4.5.3",
     "react": "16.12.0",
     "react-dom": "16.12.0"
   },
