--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "main": "src/index.js",
   "dependencies": {
     "@ant-design/icons": "^4.2.2",
+    "@xstate/react": "^0.8.1",
     "antd": "^4.5.3",
     "react": "16.12.0",
-    "react-dom": "16.12.0"
+    "react-dom": "16.12.0",
+    "xstate": "^4.13.0"
   },
   "devDependencies": {
     "gh-pages": "^3.1.0",
-    "react-scripts": "^3.4.1",
+    "react-scripts": "^3.4.3",
     "typescript": "3.8.3"
   },
   "homepage": "https://cazdemun.github.io/fish-bowl/",
